--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 dynamic = ["version"]
 dependencies = [
     # "frappe~=15.0.0" # Installed and managed by bench.
+    "PyJWT[crypto]>=2.8.0",  # For RSA256 JWT signing and verification
 ]
 
 [build-system]
